test/Fail/Sigma-syntax-1.agda
postulate
  _ : Set (x) Set
